--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,10 @@
-# Composer files
-composer.phar
-vendor/
-
-# Local configs
-config/autoload/*.local.php
-
 # Local project related files
 .settings/
 .buildpath
 .project
 
-# Binary gettext files
-*.mo
-
 # Data
-data/logs/
-data/cache/
-data/sessions/
-data/tmp/
-temp/
+data/
 
-#Doctrine 2
-data/DoctrineORMModule/Proxy/
-data/DoctrineORMModule/cache/
-
-
-# Legacy ZF1
-demos/
-extras/documentation
+# Logs
+log/
